[package]
name = "nft-mint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.15.2"
spl-associated-token-account = { version="1.1.2", features = [ "no-entrypoint" ] }
spl-token = "3.5.0"

[lib]
crate-type = ["cdylib","lib"]